--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body, html{
   height:100%;
 }
 body{
+  background-image: url('background.jpg');
   margin: 0px;
   background-color:#444;
   font-size: 18px;
@@ -21,7 +22,12 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .dancer{
-  border:10px solid red;
-  border-radius:10px;
   position:absolute;
 }
+
+/* .dancer:hover {
+  border-color: aqua;
+  border-style: dashed;
+  border-width: 10px;
+  transform: scale(2.5);
+} */
