--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body, html{
   height:100%;
 }
 body{
-  background-image: url('background.jpg');
+  background-image: url('images/background.jpg');
   margin: 0px;
   background-color:#444;
   font-size: 18px;
@@ -14,6 +14,12 @@ body, a:link, a:visited, a:active{
   padding:5px 12px;
   float:right;
 }
+
+.danceLineUp, .moveFunny, .danceLineUpVertical, .returnDancerButton{
+  padding:5px 12px;
+  float:left;
+}
+
 .topbar{
   height:32px;
   background-color: #555;
