--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body, a:link, a:visited, a:active{
   float:right;
 }
 
-.danceLineUp, .moveFunny, .danceLineUpVertical, .returnDancerButton{
+.danceLineUp, .moveFunny, .danceLineUpDiagonal, .returnDancerButton{
   padding:5px 12px;
   float:left;
 }
